Fixed text vertical alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -155,3 +155,7 @@ body {
   flex-direction: column;
   justify-content: center;
 }
+
+.footer-content p {
+  margin-bottom: 0 !important;
+}
